<resources>
    <string name="app_name">腾酷TV</string>
    <string name="home_recommand">推荐</string>
    <string name="history">历史记录</string>
    <string name="child">儿童天地</string>
    <string name="comic">相声小品</string>
    <string name="classical_dubbing">经典配音</string>
    <string name="tibetan_tv">藏语电视剧</string>
    <string name="crime_spy_war">罪案谍战</string>
    <string name="youth_idol">青春偶像</string>
    <string name="martial_arts">武侠古装</string>
    <string name="animated_cartoon">人气动漫</string>
    <string name="children_intelligence">少儿益智</string>
    <string name="moral_education">道德教育</string>
    <string name="tibetan_film">藏语专题片</string>
    <string name="honyaradoh">养生堂</string>
    <string name="agricultural_technology">农业科技</string>
    <string name="party_history">党史系列</string>
    <string name="cultural_sharing">文化共享</string>
    <string name="distance_education_for_party">党员远程教育</string>
    <string name="to_dubbing">我要配音</string>
    <string name="hot_dubbing">热门配音</string>
    <string name="source_material">素材</string>
    <string name="variety_entertainment">综艺娱乐</string>
    <string name="hahu_quyi">哈呼曲艺</string>
    <string name="online_mv">在线MV</string>
    <string name="food_program">美食节目</string>
    <string name="online_forum">在线讲坛</string>
    <string name="audio_books">有&#160;声&#160;读&#160;物</string>
    <string name="live_broadcast">现场直播</string>
    <string name="living_broadcast">正在直播</string>
    <string name="member">会员</string>
    <string name="membership_privileges">会员特权</string>
    <string name="free_movie">免费大片</string>
    <string name="ultra_clear">超清</string>
    <string name="preemptive_drama">抢先看剧</string>
    <string name="honorable_status">尊贵身份</string>
    <string name="my_collect">我的收藏</string>
    <string name="local_life">本地生活</string>
    <string name="feedback">问题反馈</string>
    <string name="setting">设置</string>
    <string name="headlines">头条</string>
    <string name="download_free">免费下载隆达APP</string>
    <string name="server">一心一意为您服务</string>
    <string name="scan_download">扫码一键下载</string>
    <string name="tibetan_media">藏语译制电视剧、电影、动画片、现场直播、配音</string>
    <string name="video">视频</string>
    <string name="reading">读物</string>
    <string name="dubbing">配音</string>
    <string name="all_anthology">全部选集</string>
    <string name="set_number">集数</string>
    <string name="collect_num">收藏数</string>
    <string name="collected_num">已收藏量</string>
    <string name="collect">收藏</string>
    <string name="introl">简介</string>
    <string name="introl1">简介:</string>
    <string name="entertaining_entertainment">钟意娱乐</string>
    <string name="household_affairs">家常里短</string>
    <string name="no_broadcast">暂无直播</string>
    <string name="play_details_page">播放详情页</string>
    <string name="playlist">播放列表</string>
    <string name="time_closure">定时关闭</string>
    <string name="content_validity">内容简介</string>
    <string name="popular_tibetan_tv">热播藏语电视剧</string>
    <string name="movie_channel">电影频道</string>
    <string name="popular_tibetan_film">热播藏语专题片</string>
    <string name="director">导演</string>
    <string name="star">主演</string>
    <string name="region">地区</string>
    <string name="play">播放</string>
    <string name="play_num">次播放</string>
    <string name="free_num">非会员免费试看前三集</string>
    <string name="detail">详情</string>
    <string name="more">更多></string>
    <string name="update">更新至五集</string>
    <string name="close">不开启</string>
    <string name="minute">分钟</string>
    <string name="done">已完成</string>
    <string name="watched">已观看</string>
    <string name="no_viewing_history">暂无观看历史</string>
    <string name="delete">删除</string>
    <string name="select_data">请先选择数据</string>
    <string name="view_history">观看历史</string>
    <string name="hot_live">精彩直播</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_hint">手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="remember">记住密码</string>
    <string name="forget">忘记密码？</string>
    <string name="forget_title">忘记密码</string>
    <string name="third_ogin">三方登录</string>
    <string name="account_tip">请输入手机号</string>
    <string name="home">首页</string>
    <string name="book">听书</string>
    <string name="vip">VIP</string>
    <string name="live">直播</string>
    <string name="recommend">重磅推荐</string>
    <string name="change">换一换</string>
    <string name="work_num">作品数</string>
    <string name="upload_work">上传作品</string>
    <string name="changeTheme">主题切换</string>
    <string name="liveChannel">直&#160;播&#160;频&#160;道</string>
    <string name="notification">通知</string>
    <string name="collect_video">收藏视频</string>
    <string name="collect_dubbing">收藏配音</string>
    <string name="collect_book">收藏读物</string>
    <string name="edit">编辑</string>
    <string name="classic_black">经典黑</string>
    <string name="dark_blue">深蓝色</string>
    <string name="default_">默认</string>
    <string name="issue_des">问题描述</string>
    <string name="do_not_second_upload_isssue">请输入要反馈的问题，我们会尽快回复</string>
    <string name="phone">联系方式</string>
    <string name="email">邮箱</string>
    <string name="telphone">手机</string>
    <string name="wechat_accout">微信号</string>
    <string name="submit">提交</string>
    <string name="classic">经典</string>
    <string name="recommend_material">推荐素材</string>
    <string name="dian" translatable="false">····</string>
    <string name="all_channel">全部频道</string>
    <string name="personal">个人中心</string>
    <string name="video_member">腾酷视频会员</string>
    <string name="renewals">继续续费</string>
    <string name="member_center">会员中心</string>
    <string name="vip_login_tip">登陆后可同步VIP特权</string>
    <string name="vip_m">腾酷视频月度VIP</string>
    <string name="vip_j">腾酷视频季度VIP</string>
    <string name="vip_y">腾酷视频年度VIP</string>
    <string name="free_for_book">听书限时免费</string>
    <string name="open_vip">开通VIP</string>
    <string name="buy_vip">立即购买</string>
    <string name="vip_power">VIP专属特权</string>
    <string name="free_ad">广告特权</string>
    <string name="clear_cache">清理缓存</string>
    <string name="select_all">全选</string>
    <string name="unselect_all">取消全选</string>
    <string name="change_password">修改密码</string>
    <string name="can_cache">允许移动网络缓存</string>
    <string name="back_cache">允许后台缓存</string>
    <string name="push_message">推送消息设置</string>
    <string name="update_version">检测版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="message_list">消息列表</string>
    <string name="evaluate_reply">评论/回复</string>
    <string name="receiver_zan">收到的赞</string>
    <string name="platform_notification">平台通知</string>
    <string name="activity_notification">活动通知</string>
    <string name="gift_record">礼物赠送记录</string>
    <string name="evaluate">评论</string>
    <string name="evaluated_work">评论了你的作品</string>
    <string name="all">全部</string>
    <string name="free_experience">免费体验</string>
    <string name="may_like">猜你喜欢</string>
    <string name="scoring">给软件打分</string>
    <string name="old_password">旧   密   码</string>
    <string name="new_password">新   密   码</string>
    <string name="make_sure_password">确认密码</string>
    <string name="complete">完成</string>
    <string name="agree_tip">注册即代表您已阅读并同意</string>
    <string name="input_old_tip">请输入旧密码</string>
    <string name="input_new_tip">请输入新密码</string>
    <string name="input_make_sure_tip">请输入确认密码</string>
    <string name="make_sure_input_tip">前后输入密码不匹配</string>
    <string name="input_length_tip">请输入8–12位密码</string>
    <string name="update_title">版本更新</string>
    <string name="current_version">当前版本%d</string>
    <string name="last_version">最新版本</string>
    <string name="scor_title">评星评级</string>
    <string name="scor_tip">请您评分</string>
    <string name="scor">软件评分</string>
    <string name="scor_hint">您如果有其他的意见和建议，请放心填写</string>
    <string name="password_digits" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="earlier">更早之前</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中…</string>
    <string name="recommend_for_you">为你推荐</string>
    <string name="movie_quality">画质</string>
    <string name="input_verify_tip">请输入验证码</string>
    <string name="get_verify">获取验证码</string>
    <string name="input_new_password_tip">请设置新密码</string>
    <string name="sure_reset">确定重置</string>
    <string name="cancel">取消</string>
    <string name="search_hint">请输入影片的首字母或全拼</string>
    <string name="book_search_hint">请输入读物的首字母或全拼</string>
    <string name="search_history">历史搜索</string>
    <string name="search_recommend">推荐搜索</string>
    <string name="subscribe">+订阅</string>
    <string name="unSubscribe">-取消订阅</string>
    <string name="no_work">你  还  没  有  任  何  资  源</string>
    <string name="to_upload">去上传</string>
    <string name="net_error">网  络  中  断</string>
    <string name="refresh">刷新</string>
    <string name="feedback_issue">报错</string>
    <string name="play_all">全部播放</string>
    <string name="play_order">播放列表</string>
    <string name="timeing">定时</string>
    <string name="close_pop">关闭</string>
    <string name="custom">自定义</string>
    <string name="link">复制链接</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="wechat">微信</string>
    <string name="live_guan">live馆</string>
    <string name="live_history">历史直播</string>
    <string name="yuyue">预约</string>
    <string name="wait_time">距离开始还有</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="million">秒</string>
    <string name="yuyue_now">立&#160;&#160;&#160;即&#160;&#160;&#160;预&#160;&#160;&#160;约</string>
    <string name="input_evaluate_tip">请添加你的评论…</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="save">保存</string>
    <string name="send">发送</string>
    <string name="playback">回放</string>
    <string name="Interaction">观众互动</string>
    <string name="guides">节目单</string>
    <string name="live_intro">直播介绍</string>
    <string name="cooperation">平台合作</string>
    <string name="input_evaluate_tip1">说点什么…</string>
    <string name="contact_phone">联系电话：</string>
    <string name="address">地址：</string>
    <string name="gift">礼物</string>
    <string name="num1">数量</string>
    <string name="give">赠送</string>
    <string name="dubbing_edit">录音编辑</string>
    <string name="work_intro_tip">完成了一个作品，不说点啥嘛~~~</string>
    <string name="_120">(限120个字)</string>
    <string name="select_lau">选择你使用的方言</string>
    <string name="release">发布</string>
    <string name="lau1">卫藏语</string>
    <string name="lau2">康巴语</string>
    <string name="lau3">安多语</string>
    <string name="uploading">视频上传中…</string>
    <string name="uploading_tip">*上传过程中请勿关闭App</string>
    <string name="uploading_success_tip">正在审核，请耐心等待</string>
    <string name="check_fail_tip">您的作品未通过审核，请重新配音</string>
    <string name="dubing_agin">重新录制</string>
    <string name="uploading_success">视频上传完毕</string>
    <string name="bind_phone">绑定手机</string>
    <string name="unbind_wechat_tip1">是否解除微信绑定？</string>
    <string name="unbind_wechat_tip2">解除绑定后将无法使用小腾酷微信登录</string>
    <string name="sure">确认</string>
    <string name="version_update">版本更新</string>
    <string name="talk_later">以后再说</string>
    <string name="vip_receive">领取会员</string>
    <string name="vip_receive_success">领取成功</string>
    <string name="receive_vip_tp_1">您可在本机领取（一年）腾酷TV影视会员服务</string>
    <string name="receive_vip_tp_2">本设备腾酷TV影视会员时长（一年）已成功领取至您的账号</string>
    <string name="receive_vip_tip_3">说明：该服务已与您所登录的账号(%s)绑定，您可以使用该账号在本设备上享有腾酷视频的会员服务</string>
    <string name="receive_vip">立即领取</string>
    <string name="new_version_characteristic">新版本特性</string>
    <string name="find">发现</string>
    <string name="str_new">新</string>
    <string name="version">版本</string>
</resources>