<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/unbind_wechat_tip1"
        android:textColor="#121212"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="17dp"
        android:text="@string/unbind_wechat_tip2"
        android:textColor="#121212"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#494949" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#0DB9FC"
            android:textSize="18sp" />

        <View
            android:layout_width="0.7dp"
            android:layout_height="match_parent"
            android:background="#7B7B7B" />

        <TextView
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="#0DB9FC"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>