<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    android:orientation="vertical"
    tools:context=".module.vip.FreeVipActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"

        android:text="@string/vip_receive"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/vip_receive_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_check_blue_24dp"
        android:drawablePadding="15dp"
        android:text="@string/vip_receive_success"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:visibility="invisible" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="220dp"
            android:src="@mipmap/membership_bg" />

        <TextView
            android:id="@+id/vip_level"
            android:layout_width="55dp"
            android:layout_height="75dp"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:background="@mipmap/viplevel_bg"
            android:gravity="center_horizontal|bottom"
            android:paddingBottom="18dp"
            android:visibility="invisible"
            android:textColor="@color/vip" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#E88B25"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/expire_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#E88B25"
                android:textSize="11sp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/receive_vip_tp_1"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/receive_vip_tp_2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="invisible" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:maxWidth="500dp"
        android:text="@string/receive_vip_tip_3"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/receive_vip"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="#445EED"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/receive_vip"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>