<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/no_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/no_work"
            android:visibility="visible"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:text="@string/no_work"
            android:textColor="@color/normal_text_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/bt_upload"
            android:layout_width="143.33dp"
            android:layout_height="24dp"
            android:background="@drawable/subscribe"
            android:gravity="center"
            android:text="@string/to_upload"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_13"
            android:textStyle="bold" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/no_net"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ic_error_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_net_error" />

        <TextView
            android:layout_width="143.33dp"
            android:layout_height="24dp"
            android:layout_below="@id/ic_error_net"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/subscribe"
            android:gravity="center"
            android:text="@string/net_error"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_13"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fresh"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_below="@id/ic_error_net"
            android:layout_marginStart="5dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/dp_5_black_corner_bg"
            android:backgroundTint="#24ACE2"
            android:gravity="center"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:text="@string/refresh"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_alignEnd="@id/ic_error_net"
            android:layout_alignBottom="@id/fresh"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/dp_5_black_corner_bg"
            android:backgroundTint="#24ACE2"
            android:gravity="center"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:text="@string/feedback_issue"
            android:textColor="@color/white"
            android:textSize="11sp" />
    </RelativeLayout>
</FrameLayout>