<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dp_15_cornner_black_bg"
        android:backgroundTint="#E8E8E8"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/icon_verson_bg">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_verson" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_faxian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_new"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_version_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/vip"
                        android:gravity="center"
                        android:paddingLeft="4dp"
                        android:paddingTop="2dp"
                        android:paddingRight="4dp"
                        android:paddingBottom="2dp"
                        tools:text="V1.1.4"
                        android:textColor="@color/white"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingLeft="20dp"
            android:text="@string/new_version_characteristic"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_version_update_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp"
            android:gravity="left"
            android:lineSpacingExtra="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="adasdasdasdasdasdaasdadad" />



    </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:gravity="center_horizontal"
          android:layout_height="wrap_content">

          <TextView
              android:id="@+id/ic_close"
              android:layout_width="120dp"
              android:layout_height="35dp"
              android:layout_marginTop="30dp"
              android:layout_marginBottom="13dp"
              android:background="@drawable/bg_version_no"
              android:gravity="center"
              android:text="@string/talk_later"
              android:textColor="@android:color/white"
              android:textSize="16sp"
              android:focusable="true"
              android:textStyle="bold" />
          <TextView
              android:id="@+id/tv_version_update"
              android:layout_width="120dp"
              android:layout_height="35dp"
              android:layout_marginTop="30dp"
              android:layout_marginBottom="13dp"
              android:layout_marginStart="50dp"
              android:background="@drawable/bg_version_select"
              android:gravity="center"
              android:focusable="true"
              android:text="@string/version_update"
              android:textColor="@android:color/white"
              android:textSize="16sp"
              android:textStyle="bold" />
      </LinearLayout>

</LinearLayout>